--- a/furniture/.env
+++ b/furniture/.env
@@ -1,3 +1,3 @@
-SECRET_KEY="django-insecure-3%w@xqpj%*r7gh*w+6+)+07l0#eaz2$4v5v33&n6j035xmj0=v"
-RAZOR_KEY_ID="rzp_live_RRnJKUq9CkD3n8"
-RAZOR_KEY_SECRET="o4YE2j5CD2IAimR9SWAjWqEW"
+SECRET_KEY="2_#5bc9xw&phzv1&cd24pl!3e$_f9!9ewx6=hi5mkx_ag4gr9i"
+RAZOR_KEY_ID="rzp_live_RSQiImtN2u8ZQ0"
+RAZOR_KEY_SECRET="WXuf2sW7keAaWey3j0bY6Xnq"
